--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <div class="section">
             <div class="section1">
               <div class="img-slider">
-                <img src="C:\Users\LENOVO\Documents\vs web\Practical3_TSE\S_mart.webp" alt="" class="img">
+                <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Flookaside.fbsbx.com%2Flookaside%2Fcrawler%2Fmedia%2F%3Fmedia_id%3D2170595849751928&imgrefurl=https%3A%2F%2Fm.facebook.com%2Fsundoremay%2Fphotos%2Fa.683133728498155%2F2170595849751928%2F&tbnid=pfLDaJ_ri-hzmM&vet=12ahUKEwjK2vD6irv8AhVJi9gFHXcbDpgQMygPegUIARCCAg..i&docid=Eraub9fV4NqK1M&w=554&h=320&q=Smart%20shopping&ved=2ahUKEwjK2vD6irv8AhVJi9gFHXcbDpgQMygPegUIARCCAg" alt="" class="img">
                 <img src="C:\Users\LENOVO\Documents\vs web\Practical3_TSE\FB_Shop_From-dashboard-1642153810.png" alt="" class="img">
                 <img src="C:\Users\LENOVO\Documents\vs web\Practical3_TSE\thecollective.png" alt="" class="img">
                 <img src="C:\Users\LENOVO\Documents\vs web\Practical3_TSE\Mobile_Website_illustration.png" alt="" class="img">
