--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
           <div class="section">
             <div class="section1">
               <div class="img-slider">
-                <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Flookaside.fbsbx.com%2Flookaside%2Fcrawler%2Fmedia%2F%3Fmedia_id%3D2170595849751928&imgrefurl=https%3A%2F%2Fm.facebook.com%2Fsundoremay%2Fphotos%2Fa.683133728498155%2F2170595849751928%2F&tbnid=pfLDaJ_ri-hzmM&vet=12ahUKEwjK2vD6irv8AhVJi9gFHXcbDpgQMygPegUIARCCAg..i&docid=Eraub9fV4NqK1M&w=554&h=320&q=Smart%20shopping&ved=2ahUKEwjK2vD6irv8AhVJi9gFHXcbDpgQMygPegUIARCCAg" alt="" class="img">
-                <img src="C:\Users\LENOVO\Documents\vs web\Practical3_TSE\FB_Shop_From-dashboard-1642153810.png" alt="" class="img">
+                <img src="https://images.pexels.com/photos/6858618/pexels-photo-6858618.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="img">
+                <img src="https://images.pexels.com/photos/6858618/pexels-photo-6858618.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="img">
                 <img src="C:\Users\LENOVO\Documents\vs web\Practical3_TSE\thecollective.png" alt="" class="img">
                 <img src="C:\Users\LENOVO\Documents\vs web\Practical3_TSE\Mobile_Website_illustration.png" alt="" class="img">
                 <img src="C:\Users\LENOVO\Documents\vs web\Practical3_TSE\WordPress_Ecommerce-1591344791.png" alt="" class="img">
@@ -86,7 +86,7 @@
                   <div class="info">128GB with best camera quality.</div>
                 </div>
                 <div class="items">
-                  <div class="img img1"><img src="https://images.pexels.com/photos/5552789/pexels-photo-5552789.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt=""></div>
+                  <div class="img img1"><img src="https://images.pexels.com/photos/6858618/pexels-photo-6858618.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt=""></div>
                   <div class="name">TELEVISION</div>
                   <div class="price"><strike>$40</strike> Now only $18</div>
                   <div class="info">HD quality visibility with LCOD Screen.</div>
