--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
               <div class="img-slider">
                 <img src="https://images.pexels.com/photos/6858618/pexels-photo-6858618.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="img">
                 <img src="https://images.pexels.com/photos/6858618/pexels-photo-6858618.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="img">
-                <img src="C:\Users\LENOVO\Documents\vs web\Practical3_TSE\thecollective.png" alt="" class="img">
-                <img src="C:\Users\LENOVO\Documents\vs web\Practical3_TSE\Mobile_Website_illustration.png" alt="" class="img">
-                <img src="C:\Users\LENOVO\Documents\vs web\Practical3_TSE\WordPress_Ecommerce-1591344791.png" alt="" class="img">
+                <img src="https://images.pexels.com/photos/8839887/pexels-photo-8839887.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="img">
+                <img src="https://media.istockphoto.com/photos/folded-blue-jeans-on-a-white-background-modern-casual-clothing-flat-picture-id1281304280" alt="" class="img">
+                <img src="https://images.pexels.com/photos/6858618/pexels-photo-6858618.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="img">
               </div>
       
             </div>
